adx/src/snapshots/adx__test__cli_search.snap
---
source: adx/src/main.rs
info:
  program: adx
  args:
    - appcompat
---
success: true
exit_code: 0
----- stdout -----
androidx.appcompat:appcompat:1.7.0
androidx.appcompat:appcompat-resources:1.7.0
androidx.asynclayoutinflater:asynclayoutinflater-appcompat:1.1.0-alpha01
androidx.emoji:emoji-appcompat:1.2.0-alpha03
com.android.support:appcompat-v7:28.0.0
com.android.support:support-emoji-appcompat:28.0.0

----- stderr -----
