adx/src/snapshots/adx__test__cli_search_no_results.snap
---
source: adx/src/main.rs
info:
  program: adx
  args:
    - qtc
---
success: true
exit_code: 0
----- stdout -----
No results found!

----- stderr -----
