adx/src/snapshots/adx__test__cli_search_stable.snap
---
source: adx/src/main.rs
info:
  program: adx
  args:
    - "--channel"
    - stable
    - appcompat
---
success: true
exit_code: 0
----- stdout -----
androidx.appcompat:appcompat:1.3.1
androidx.appcompat:appcompat-resources:1.3.1

----- stderr -----
